# news-agg

./: .env.example  .gitignore  README.md  docker-compose.yml  plan.md
backend/: ADDING_SOURCES.md  CLAUDE.md  pyproject.toml
backend/src/news_agg/: CLAUDE.md  backfill.py  cli.py  clustering.py  config.py  db.py  main.py  models.py  pipeline.py  rag.py  scheduler.py  search.py  snapshot.py  source_config.py  sources.yaml
backend/src/news_agg/agents/: __init__.py  chains.py  graph.py  knowledge.py  models.py  runner.py  state.py  tools.py  tracing.py
backend/src/news_agg/agents/prompts/: categorize_v1.yaml  orchestrator_v1.yaml  qa_review_v1.yaml
backend/src/news_agg/scraper/: CLAUDE.md  article.py  browser.py  listing.py  rss.py
backend/src/news_agg/text/: dates.py  dedup.py  language.py  normalize.py
backend/src/news_agg/utils/: logging.py  rate_limit.py
backend/static/: dashboard.html
backend/tests/: conftest.py  test_dates.py  test_dedup.py  test_gaps.py  test_normalize.py
docker/: CLAUDE.md  init.sql
docker/migrations/: 002_agent_schema.sql  003_reviewed_by.sql  004_stories.sql
docker/searxng/: settings.yml
docs/plans/: 2026-02-16-article-qa-agents-design.md  2026-02-21-coverage-gap-audit-design.md  2026-02-21-coverage-gap-audit-plan.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/search/: page.tsx
frontend/app/stats/: page.tsx
frontend/app/story/[id]/: page.tsx
frontend/components/: nav.tsx  search-bar.tsx  source-pill.tsx  stat-counter.tsx  story-card.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/lib/: api.ts  types.ts  utils.ts
