[project]
name = "news-agg"
version = "0.1.0"
description = "Sri Lankan news aggregation pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "feedparser>=6.0",
    "playwright>=1.58,<1.59",
    "click>=8.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "langgraph>=0.4",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.0",
    "langfuse>=3.0",
    "graphiti-core>=0.7",
    "sentence-transformers>=3.0",
    "meilisearch>=0.31",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[project.scripts]
news-agg = "news_agg.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_agg"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
